kubernetes/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: database-statefulset
  name: database-statefulset
spec:
  serviceName: database-headless
  replicas: 1
  selector:
    matchLabels:
      app: database-statefulset
  template:
    metadata:
      labels:
        app: database-statefulset
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql
          - name: mysql-init
            mountPath: /docker-entrypoint-initdb.d
            readOnly: true
      volumes:
      - name: mysql-init
        configMap:
          name: mysql-init
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: database-headless
spec:
  selector:
    app: database-statefulset
  clusterIP: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
