kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rabbitmq-statefulset
  name: rabbitmq-statefulset
spec:
  serviceName: rabbitmq-headless
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-statefulset
  template:
    metadata:
      labels:
        app: rabbitmq-statefulset
    spec:
      containers:
      - image: rabbitmq:3.11-management
        name: rabbitmq 
        resources: 
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "2Gi"
        ports:
        - containerPort: 5672
        - containerPort: 15672
        readinessProbe:
          exec:
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 5
        volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
spec:
  selector:
    app: rabbitmq-statefulset
  clusterIP: None
  type: ClusterIP
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
